* Adding #166 More robust queue that is recoverable
* Adding ability to extract HDR10+ metadata if hdr10plus_parser is detected on path
* Adding #178 selector for number of autocrop positions throughout video (thanks to bmcassagne)
* Adding Windows 10 notification for queue complete success
* Adding #194 fast two pass encoding (thanks to Ugurtan)
* Fixing German translations (thanks to SMESH)
* Fixing #176 Unable to change queue order or delete task from queue since 4.1.0 (thanks to Etz)
* Fixing #185 need to specify channel layout when downmixing (thanks to Ugurtan)
* Fixing #187 cleaning up partial download of FFmpeg (thanks to Todd Wilkinson)
* Fixing #190 add missing chromaloc parameter for x265 (thanks to Etz)
* Fixing that returning item back from queue of a different encoder type would crash Fastflix
* Fixing HDR10 details to be track specific (thanks to Harybo)

## Version 4.1.2

* Fixing #180 Minor UI glitch, custom bitrate retains "k" when edited from queue (thanks to Etz)
* Fixing custom QP crashes FastFlix (thanks to J-mas)
* Fixing adding a dot for microseconds in time fields would crash FastFlix (thanks to remlap)
* Fixing Chinese translations (thanks to leonardyan)

## Version 4.1.1

* Fixing #156 Copy was broken due to copy settings being renamed due to library update (thanks to leonardyan)
* Fixing #172 FastFlix could not set profile setting copy (thanks to Etz)
* Fixing calling delete on a profile without a source video could crash FastFlix

## Version 4.1.0

* Adding #118 #126 advanced panel with FFmpeg filters (thanks to Marco Ravich and remlap)
* Adding #114 info panel that shows source details (thanks to leonardyan)
* Adding #117 support for text based burn in subtitles
* Adding #152 option to switch back to old bubbly buttons (thanks to GitKike98)
* Adding logging level selector in settings for GUI
* Adding button to extract text based subtitles
* Adding dual pass option for ffmpeg options (thanks to Catatau)